there's a weird bug on mobile, so I added shadow to the H3 tags so they're legible

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ font-family: 'Roboto', sans-serif;
 
 
 .darkSelection:hover {
-    box-shadow: 0px 0px 10px 5px #000000
+    box-shadow: 0px 0px 10px 5px #000000;
 }
 
 
@@ -139,6 +139,8 @@ figure img {
     z-index: 100;
 }
 h3 {
+    
+    text-shadow: 2px 2px 15px black, -2px -2px 15px black;
     border: 20px;
 }
 .horizonBarContain {
@@ -296,6 +298,7 @@ footer {
         width:100vw;
         height: 100vh;
     }
+
 
     /* #everything {
         width: 100vw;
